--- a/One-Page Website/one_page_website.html
+++ b/One-Page Website/one_page_website.html
@@ -3,29 +3,31 @@
        <head>
 	      <title> Car show 2022 </title>
 		  <meta charset="utf-8">
+		  <link rel="stylesheet" href="./CSS/one_page_website.css">
 		</head>
 
         <body>
         
         <!--- NAV -->
         
-        <div>
-		    <div>
-			    <ul>
-				    <a href="#home" id="link"><li>HOME</li></a>
+        <div class="wrap">
+		    <div class="navbar">
+				<div class="menu-container">
+			    <ul class="nobull">
+				    <a href="#home"><li>HOME</li></a>
 					<a href="#auction"><li>AUCTION</li></a>
 					<a href="#contact"><li>RESERVATIONS</li></a>
 				</ul>
+			    </div>
 			</div>
 		</div>
 		<!--END NAV--> 	
 
         <!--HOME-->
 		<div id="home">
-		    <div>
-			     <iframe src="./images/Videos/video1.mp4" height="275" width="350" title="Intro to Vancouver 2022 Car Show"></iframe>
-			   <div>
-			       <span>The Car Show of 2022</span>
+		    <div class="container">
+				<div class="text-center">
+				<span class="head-main"> Welcome to the Car Show of 2022</span>
 				</div>
 			</div>
 		</div>
