--- a/One-Page Website/one_page_website.html
+++ b/One-Page Website/one_page_website.html
@@ -4,6 +4,7 @@
 	      <title> Car show 2022 </title>
 		  <meta charset="utf-8">
 		  <link rel="stylesheet" href="./CSS/one_page_website.css">
+		  <script src="./JS/one_page_website.js" defer></script>
 		</head>
 
         <body>
