--- a/website project/index2.html
+++ b/website project/index2.html
@@ -36,7 +36,9 @@
       <!---GALLERY--->
       <section id="gallery">
           <div class="container">
-              <h1>Gallery</h1>
+              <h1> 
+			  Gallery
+			  </h1>
               <div class="flex-container">
               </div>
            </div>
